[gd_scene load_steps=25 format=3 uid="uid://0kla80l6fl5a"]

[ext_resource type="Script" path="res://wires.gd" id="1_3o1bu"]
[ext_resource type="PackedScene" uid="uid://c2gxsjplum3s0" path="res://Hitboxes/interaction_manager.tscn" id="1_5gtvc"]
[ext_resource type="Script" path="res://Hitboxes/Interactions/fusebox_interaction.gd" id="2_a0arb"]
[ext_resource type="Texture2D" uid="uid://de4jhotgbb1h6" path="res://Art/fuseboxtest-1.png.png" id="3_8dv0d"]
[ext_resource type="Shader" path="res://shaders/noteshader.gdshader" id="4_eq1xk"]
[ext_resource type="Texture2D" uid="uid://b4opnjxkn6piu" path="res://Art/fuseboxresize.png" id="4_q7vug"]
[ext_resource type="Texture2D" uid="uid://cme22dc4r5u3r" path="res://Art/clippedbluewire.png" id="5_fib7y"]
[ext_resource type="Texture2D" uid="uid://sjf8e8hinid6" path="res://Art/bluewire.png" id="7_3lcfl"]
[ext_resource type="Texture2D" uid="uid://dp0b2dtgq23g1" path="res://Art/redwire.png" id="7_q3ekx"]
[ext_resource type="Texture2D" uid="uid://dka7r483t141w" path="res://Art/clippedredwire.png" id="8_hy6il"]
[ext_resource type="Texture2D" uid="uid://t4rgqbl5plbv" path="res://Art/greenwire.png" id="9_djg58"]
[ext_resource type="Texture2D" uid="uid://cgwl00xdcgn4k" path="res://Art/clippedgreenwire.png" id="10_wfge3"]
[ext_resource type="Texture2D" uid="uid://ctgjck3dm4dha" path="res://Art/yellowwire.png" id="11_ww805"]
[ext_resource type="Texture2D" uid="uid://xlgmepyfrr6m" path="res://Art/clippedyellowwire.png" id="12_316fh"]
[ext_resource type="AudioStream" uid="uid://c5ebtlf5i5j2f" path="res://Audio/explosion.wav" id="13_cp8ey"]
[ext_resource type="PackedScene" uid="uid://yd6y3s48r64d" path="res://UI/dialog_player.tscn" id="15_k8stu"]
[ext_resource type="Script" path="res://Hitboxes/Interactions/fusebox.gd" id="16_pve4r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ik13i"]
size = Vector2(49, 41.5622)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mva0o"]
size = Vector2(122, 124)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2qn6k"]
shader = ExtResource("4_eq1xk")
shader_parameter/flash_color = Color(1, 1, 0, 1)
shader_parameter/opacity = 0.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cg0hp"]

[sub_resource type="Animation" id="Animation_ks7dq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CompleteLevel/Label:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InteractionManager/CompleteLevel/Label:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_yw5gg"]
resource_name = "complete_level"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CompleteLevel/Label:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InteractionManager/CompleteLevel/Label:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bmfcr"]
_data = {
"RESET": SubResource("Animation_ks7dq"),
"complete_level": SubResource("Animation_yw5gg")
}

[node name="Wires" type="Node2D"]
script = ExtResource("1_3o1bu")

[node name="InteractionManager3" parent="." instance=ExtResource("1_5gtvc")]
script = ExtResource("2_a0arb")

[node name="CollisionShape2d" parent="InteractionManager3" index="0"]
position = Vector2(1082.28, 110.219)
shape = SubResource("RectangleShape2D_ik13i")

[node name="CollisionShape2d" parent="InteractionManager3/Bound" index="0"]
position = Vector2(1082, 110)
shape = SubResource("RectangleShape2D_mva0o")

[node name="Fuseboxtest-1png" type="Sprite2D" parent="InteractionManager3"]
z_index = 1
material = SubResource("ShaderMaterial_2qn6k")
position = Vector2(1083, 110)
texture = ExtResource("3_8dv0d")

[node name="CanvasLayer" type="CanvasLayer" parent="InteractionManager3"]
visible = false

[node name="TextureRect" type="TextureRect" parent="InteractionManager3/CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.0
offset_top = -224.0
offset_right = -54.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.23966, 3.38881)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_q7vug")

[node name="BlueWirePic" type="TextureRect" parent="InteractionManager3/CanvasLayer/TextureRect"]
layout_mode = 0
offset_left = -36.1149
offset_top = -0.885266
offset_right = -23.1149
offset_bottom = 11.1147
scale = Vector2(10.7709, 10.7709)
texture = ExtResource("7_3lcfl")
expand_mode = 1

[node name="CutBlueWire" type="TextureRect" parent="InteractionManager3/CanvasLayer/TextureRect"]
visible = false
layout_mode = 0
offset_left = -36.1149
offset_top = -0.885266
offset_right = -23.1149
offset_bottom = 11.1147
scale = Vector2(10.7709, 10.7709)
texture = ExtResource("5_fib7y")
expand_mode = 1

[node name="RedWirePic" type="TextureRect" parent="InteractionManager3/CanvasLayer/TextureRect"]
layout_mode = 0
offset_left = -16.6684
offset_top = -0.885267
offset_right = -3.66841
offset_bottom = 11.1147
scale = Vector2(10.7709, 10.7709)
texture = ExtResource("7_q3ekx")
expand_mode = 1

[node name="CutRedWire" type="TextureRect" parent="InteractionManager3/CanvasLayer/TextureRect"]
visible = false
layout_mode = 0
offset_left = -16.6684
offset_top = -0.885267
offset_right = -3.66841
offset_bottom = 11.1147
scale = Vector2(10.7709, 10.7709)
texture = ExtResource("8_hy6il")
expand_mode = 1

[node name="GreenWirePic" type="TextureRect" parent="InteractionManager3/CanvasLayer/TextureRect"]
layout_mode = 0
offset_left = 4.01277
offset_top = -0.885267
offset_right = 17.0128
offset_bottom = 11.1147
scale = Vector2(10.7709, 10.7709)
texture = ExtResource("9_djg58")
expand_mode = 1

[node name="CutGreenWire" type="TextureRect" parent="InteractionManager3/CanvasLayer/TextureRect"]
visible = false
layout_mode = 0
offset_left = 4.01277
offset_top = -0.885267
offset_right = 17.0128
offset_bottom = 11.1147
scale = Vector2(10.7709, 10.7709)
texture = ExtResource("10_wfge3")
expand_mode = 1

[node name="YellowWirePic" type="TextureRect" parent="InteractionManager3/CanvasLayer/TextureRect"]
layout_mode = 0
offset_left = 24.6939
offset_top = -0.885267
offset_right = 37.6939
offset_bottom = 11.1147
scale = Vector2(10.7709, 10.7709)
texture = ExtResource("11_ww805")
expand_mode = 1

[node name="CutYellowWire" type="TextureRect" parent="InteractionManager3/CanvasLayer/TextureRect"]
visible = false
layout_mode = 0
offset_left = 24.694
offset_top = -0.885
offset_right = 37.694
offset_bottom = 11.115
scale = Vector2(10.7709, 10.7709)
texture = ExtResource("12_316fh")
expand_mode = 1

[node name="BlueButtonNode" type="Button" parent="InteractionManager3/CanvasLayer"]
offset_left = 447.0
offset_top = 137.0
offset_right = 502.0
offset_bottom = 500.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_cg0hp")

[node name="RedButtonNode" type="Button" parent="InteractionManager3/CanvasLayer"]
offset_left = 528.0
offset_top = 137.0
offset_right = 583.0
offset_bottom = 500.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_cg0hp")

[node name="GreenButtonNode" type="Button" parent="InteractionManager3/CanvasLayer"]
offset_left = 594.0
offset_top = 146.0
offset_right = 649.0
offset_bottom = 509.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_cg0hp")

[node name="YellowButtonNode" type="Button" parent="InteractionManager3/CanvasLayer"]
offset_left = 666.0
offset_top = 143.0
offset_right = 721.0
offset_bottom = 506.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_cg0hp")

[node name="WrongSound" type="AudioStreamPlayer" parent="InteractionManager3"]
stream = ExtResource("13_cp8ey")
bus = &"SFX"

[node name="DialogPlayer" parent="InteractionManager3" instance=ExtResource("15_k8stu")]
script = ExtResource("16_pve4r")
scene_file_text = "res://json/shouting.json"

[node name="CompleteLevel" type="CanvasLayer" parent="."]
visible = false

[node name="Label" type="Label" parent="CompleteLevel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -533.0
offset_top = -77.0
offset_right = -236.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Level Two Complete!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bmfcr")
}

[connection signal="pressed" from="InteractionManager3/CanvasLayer/BlueButtonNode" to="." method="_on_button_pressed"]
[connection signal="pressed" from="InteractionManager3/CanvasLayer/RedButtonNode" to="." method="_on_red_button_node_pressed"]
[connection signal="pressed" from="InteractionManager3/CanvasLayer/GreenButtonNode" to="." method="_on_green_button_node_pressed"]
[connection signal="pressed" from="InteractionManager3/CanvasLayer/YellowButtonNode" to="." method="_on_yellow_button_node_pressed"]
[connection signal="done" from="InteractionManager3/DialogPlayer" to="." method="_on_dialog_player_done"]

[editable path="InteractionManager3"]
